[ASDP-714] remove the use of URL